--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>HP Web Application</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/6b7a877ee5.js" crossorigin="anonymous"></script>
+    <!-- Gainsight PX Tag-->
+  <script type="text/javascript">
+  (function(n,t,a,e,co){var i="aptrinsic";n[i]=n[i]||function(){
+      (n[i].q=n[i].q||[]).push(arguments)},n[i].p=e;n[i].c=co;
+    var r=t.createElement("script");r.async=!0,r.src=a+"?a="+e;
+    var c=t.getElementsByTagName("script")[0];c.parentNode.insertBefore(r,c)
+  })(window,document,"https://web-sdk.aptrinsic.com/api/aptrinsic.js","AP-PU1DIJNZMO02-2");
+</script>
+<!-- Gainsight PX Tag-->
 </head>
 <body>
     <div class="container">
