--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             var password = document.getElementById("pass").value;
 
             if(email.length >= 8 && password.length >= 2){
-                window.location.assign("home.html");
+                //window.location.assign("home.html");
+                window.location.href="https://harshitapedasingu.github.io/DemoApp/home.html";
 //passing user and account objects:
                 aptrinsic("identify",
   {
