--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <!--Login button-->
                 <div class="btn-field">
-                    <button type="submit" id="signinBtn" onclick="func()">Sign in</button>
+                    <button type="submit" id="signinBtn" onclick="func();" location.href="https://harshitapedasingu.github.io/DemoApp/home.html">Sign in</button>
                 </div>
             </form>
         </div>
@@ -51,7 +51,7 @@
 
             if(email.length >= 8 && password.length >= 2){
                 //window.location.assign("home.html");
-                window.location.href="https://harshitapedasingu.github.io/DemoApp/home.html";
+                //window.location.href="https://harshitapedasingu.github.io/DemoApp/home.html";
 //passing user and account objects:
                 aptrinsic("identify",
   {
