--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <!--Login button-->
                 <div class="btn-field">
-                    <button type="submit" id="signinBtn" onclick="func();" location.href="https://harshitapedasingu.github.io/DemoApp/home.html">Sign in</button>
+                    <button type="submit" id="signinBtn" onclick="func();" location.href="home.html">Sign in</button>
                 </div>
             </form>
         </div>
