--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!--SIGN IN-->
         <div class="form-box">
             <h1>User Login</h1>
-            <form class="loginForm" method="post" name="form">
+            <form class="loginForm" action="home.html" name="form" onsubmit="return func()">
                 <div class="input-group">
                     <!--Email-->
                     <div class="input-field">
@@ -33,11 +33,12 @@
                         <i class="fa-solid fa-lock"></i>
                         <input type="password" placeholder="Password" name="password" id="pass">
                     </div>
+                    <input type="submit" value="Sign In"> 
                 </div>
                 <!--Login button-->
-                <div class="btn-field">
-                    <button type="submit" id="signinBtn" onclick="func();" location.href="home.html">Sign in</button>
-                </div>
+               <!--<div class="btn-field">
+                   <button type="submit" id="signinBtn" onclick="func();" location.href="home.html">Sign in</button>
+                </div>-->
             </form>
         </div>
         <!--END-->
