--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                         <i class="fa-solid fa-lock"></i>
                         <input type="password" placeholder="Password" name="password" id="pass">
                     </div>
-                    <input class="btn-field" type="submit" value="Sign In"> 
+                    <div class="btn-field">
+                        <input type="submit" value="Sign In"> 
+                    </div>
                 </div>
                 <!-- Login button -->
                 <!-- <div class="btn-field">
