--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <input type="password" placeholder="Password" name="password" id="pass">
                     </div>
                     <div class="btn-field">
-                        <input style="background: black; color: white; width: 200px;" type="submit" value="Sign In"> 
+                        <input type="submit" value="Sign In"> 
                     </div>
                 </div>
                 <!-- Login button -->
