--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <input type="password" placeholder="Password" name="password" id="pass">
                     </div>
                     <div class="btn-field">
-                        <input style="color: white; text-align: center; cursor:pointer;" type="submit" value="Sign In"> 
+                        <input style="color: white; text-align: center; cursor:pointer; hover:background-color:#999; hover:color:#eaeaea;" type="submit" value="Sign In"> 
                     </div>
                 </div>
                 <!-- Login button -->
