--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
         <ul>
             <li><a href="#">Home</a></li>
             <li class="hideOnMobile"></li><a href="blog.html">Blog</a></li>
-            <li class="hideOnMobile"><a href="#">Community</a></li>
+            <li class="hideOnMobile"><a href="community.html">Community</a></li>
             <li class="hideOnMobile"><a href="#">About</a></li>
             <li class="hideOnMobile"><a href="index.html" onclick="window.aptrinsic('reset');">Log out</a></li>
             <li onclick=showSidebar()><a href="#"><i class="fa-solid fa-bars"></i></a></li>
