--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
             <li><a href="#">Home</a></li>
             <li class="hideOnMobile"></li><a href="blog.html">Blog</a></li>
             <li class="hideOnMobile"><a href="community.html">Community</a></li>
-            <li class="hideOnMobile"><a href="#">About</a></li>
+            <li class="hideOnMobile"><a href="about.html">About</a></li>
             <li class="hideOnMobile"><a href="index.html" onclick="window.aptrinsic('reset');">Log out</a></li>
             <li onclick=showSidebar()><a href="#"><i class="fa-solid fa-bars"></i></a></li>
         </ul>
