--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
             <li><a href="#">Corporate/Business Travel</a></li>
         </ul>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="home.html">Home</a></li>
             <li class="hideOnMobile"></li><a href="blog.html">Blog</a></li>
             <li class="hideOnMobile"><a href="community.html">Community</a></li>
             <li class="hideOnMobile"><a href="about.html">About</a></li>
