--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
         </ul>
         <ul>
             <li><a href="home.html">Home</a></li>
-            <li class="hideOnMobile"></li><a href="blog.html">Blog</a></li>
+            <li class="hideOnMobile"><a href="blog.html">Blog</a></li>
             <li class="hideOnMobile"><a href="community.html">Community</a></li>
             <li class="hideOnMobile"><a href="about.html">About</a></li>
             <li class="hideOnMobile"><a href="index.html" onclick="window.aptrinsic('reset');">Log out</a></li>
