--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
             <li><a href="#">Corporate/Business Travel</a></li>
         </ul>
         <ul>
-            <li></li><a href="home.html" style="margin-right: auto;">Home</a></li>
+            <li></li><a href="home.html" style="align-tems: left;">Home</a></li>
             <li class="hideOnMobile"></li><a href="blog.html">Blog</a></li>
             <li class="hideOnMobile"></li><a href="community.html">Community</a></li>
             <li class="hideOnMobile"></li><a href="about.html">About</a></li>
