--- a/home.html
+++ b/home.html
@@ -33,8 +33,8 @@
         <ul>
             <li><a href="home.html">Home</a></li>
             <li class="hideOnMobile"></li><a href="blog.html">Blog</a></li>
-            <li class="hideOnMobile"></li><a href="community.html">Community</a></li>
-            <li class="hideOnMobile"></li><a href="about.html">About</a></li>
+            <li class="hideOnMobile"></li><a href="community.html">Album</a></li>
+            <li class="hideOnMobile"></li><a href="about.html">Checkout form</a></li>
             <li class="hideOnMobile"></li><a href="index.html" onclick="window.aptrinsic('reset');">Log out</a></li>
             <li onclick=showSidebar()><a href="#"><i class="fa-solid fa-bars"></i></a></li>
         </ul>
