--- a/checkout.html
+++ b/checkout.html
@@ -39,7 +39,7 @@
 <div class="container">
   <main>
     <div class="py-5 text-center">
-      <img class="d-block mx-auto mb-4" src="relax.jpg" alt="" width="72" height="57">
+      <img class="d-block mx-auto mb-4" src="billing.png" alt="" width="72" height="57">
       <h2>Checkout form</h2>
       <p class="lead">Please provide the billing details below where you would like to receive correspondence regarding your upcoming vacation.</p>
     </div>
