--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
 
     <!-- CARDS -->
     <div class="container py-5"> 
-        <h1 class="text-center" style="color: rgb(27, 100, 110);">Popular Getaways</h1>
+        <h1 class="text-center" style="color: rgb(12, 68, 43); font-size: 35px;">Popular Getaways</h1>
 
         <div class="row row-cols-1 row-cols-md-3 g-4 py-5">
             <!--CARD 1-->
