--- a/album.html
+++ b/album.html
@@ -71,8 +71,8 @@
         <h1 class="fw-light">Your Travel Memories</h1>
         <p class="lead text-muted">Some memories & people are too special to stay on-screen. Turn your memories into tangible forever pages by uploading them here.</p>
         <p>
-          <a href="#" class="btn btn-primary my-2">Main call to action</a>
-          <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+          <a href="#" class="btn btn-primary my-2">Start Creating</a>
+          <a href="#" class="btn btn-secondary my-2">Explore...</a>
         </p>
       </div>
     </div>
