--- a/checkout.html
+++ b/checkout.html
@@ -269,6 +269,21 @@
     </ul>
   </footer>
 </div>
+    <!-- CUSTOM EVENTS -->
+    <script>
+        var startTime = new Date();
+
+        window.addEventListener('beforeunload', function(event) {
+            var endTime = new Date();
+            var timeSpent = endTime - startTime;
+            var secondsSpent = Math.round(timeSpent / 1000);
+
+            // Send the time spent to Aptrinsic
+            aptrinsic('track', 'Page View', {
+                'Time Spent': secondsSpent
+            });
+        });
+    </script>
 
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
