--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
             <li><a href="#">Corporate/Business Travel</a></li>
         </ul>
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="home.html" onmouseover="aptrinsic('track','homeHover',{});">Home</a></li>
             <li class="hideOnMobile"></li><a href="blog.html">Blog</a></li>
             <li class="hideOnMobile"></li><a href="album.html">Album</a></li>
             <li class="hideOnMobile"></li><a href="checkout.html">Checkout form</a></li>
