--- a/home.html
+++ b/home.html
@@ -32,8 +32,8 @@
         </ul>
         <ul>
             <li><a href="home.html" onmouseover="aptrinsic('track','homeHover',{});">Home</a></li>
-            <li class="hideOnMobile"></li><a href="blog.html">Blog</a></li>
-            <li class="hideOnMobile"></li><a href="album.html">Album</a></li>
+            <li class="hideOnMobile"></li><a href="blog.html" onmouseover="aptrinsic('track','blogHover',{});">Blog</a></li>
+            <li class="hideOnMobile"></li><a href="album.html" onmouseover="aptrinsic('track','albumHover',{});">Album</a></li>
             <li class="hideOnMobile"></li><a href="checkout.html">Checkout form</a></li>
             <li class="hideOnMobile"></li><a href="index.html" onclick="window.aptrinsic('reset');">Log out</a></li>
             <li onclick=showSidebar()><a href="#"><i class="fa-solid fa-bars"></i></a></li>
